# SmallStringOptimizationStudy

./: CMakeLists.txt  README.md
src/: main.cpp  string.hpp
tests/: CMakeLists.txt  test_string.cpp
